# EvoZeus

./: .gitignore  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  VISION.md  ZEUS_STATUS.yml  package-lock.json  package.json  pyproject.toml  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  candidate_suggestion.yml  case.yml  config.yml  factor.yml  feature_request.yml  governance_rfc.yml  security_report.md
.github/PULL_REQUEST_TEMPLATE/: candidate_submission.md  code_change.md  docs_example_change.md  governance_change.md  schema_change.md  skill_instruction_change.md
.github/workflows/: auto-response.yml  candidate-schema-check.yml  dirty-pr-check.yml  labeler.yml  privacy-scan.yml  proof-gate.yml  queue-guard.yml
__infra__/: README.md
__infra__/scripts/: result_report_smoke.py  run_factor_smoke.py  run_session_report.py  scan_factors_smoke.py  scan_sessions_smoke.py
__infra__/tests/: test_cli.py  test_codex_scanner.py  test_companion.py  test_default_factors.py  test_factor_packs.py  test_factor_runtime_isolation.py  test_file_repository.py  test_result_visualizations.py  test_runtime_paths.py  (+2 more)
assets/: README.md
cases/: README.md
docs/: README.md  README.zh-CN.md  design-doc-v0.1.md
factors/: README.md
patterns/: README.md
schemas/: candidate.schema.json  report.schema.json  session.schema.json
scripts/: check_pr_ready.py  evozeus-doctor.mjs  evozeus-doctor.test.mjs
tests/: test_cli.py  test_companion.py  test_workspace.py
(+148 files in other folders)
